force-app/main/default/objects/WheelDiameter__c/WheelDiameter__c.object-meta.xml
<CustomObject>
    <description>Railroad wheel diameter</description>
    <label>Wheel Diameter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Diameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>