force-app/main/default/objects/WheelDiameter__c/fields/D_mm__c.field-meta.xml
<CustomField>
    <fullName>D_mm__c</fullName>
    <formula>&apos;ø&apos;+SUBSTITUTE(TEXT(ROUND(OD_mm__c,1)),&apos;,&apos;,&apos;.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ø D (mm)</label>
    <type>Text</type>
</CustomField>