force-app/main/default/objects/WheelDiameter__c/fields/H_inch__c.field-meta.xml
<CustomField>
    <fullName>H_inch__c</fullName>
    <formula>&apos;H&apos;+TEXT(ROUND(OD_mm__c/25.4,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H (inch)</label>
    <type>Text</type>
</CustomField>