force-app/main/default/objects/WheelDiameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OD_mm__c</columns>
    <columns>D_mm__c</columns>
    <columns>H_inch__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>